vault.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault 
  labels:
    app.kubernetes.io/name: vault 
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: vault

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault 
  labels:
    app.kubernetes.io/name: vault
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: vault 
          image: vaultwarden/server 
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data/
      volumes:
        - name: data
          hostPath:
           path: /storage/k3s/vault
           type: DirectoryOrCreate
